--- a/app/src/main/res/layout/n_activity_launcher.xml
+++ b/app/src/main/res/layout/n_activity_launcher.xml
@@ -8,7 +8,6 @@
     tools:context=".N_LauncherActivity"
     android:background="@drawable/bg_launcher">
 
-
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
@@ -28,9 +27,7 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="170dp"
         android:layout_marginTop="30dp"
-        android:layout_marginEnd="170dp"
         android:text="Hi there!"
         android:textSize="15sp"
         android:textColor="@color/black"
@@ -46,10 +43,11 @@
         android:layout_marginStart="50dp"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="50dp"
-        android:textSize="15sp"
-        android:textColor="@color/black"
-        android:fontFamily="@font/poppinsmedium"
+        android:gravity="center"
         android:text="We're here to help you find events at Brawijaya."
+        android:textColor="@color/black"
+        android:textSize="15sp"
+        android:fontFamily="@font/poppinsmedium"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
@@ -61,10 +59,11 @@
         android:layout_marginStart="50dp"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="50dp"
-        android:textSize="15sp"
-        android:textColor="@color/black"
-        android:fontFamily="@font/poppinsmedium"
+        android:gravity="center"
         android:text="The choice is yours: Log in or create an account."
+        android:textColor="@color/black"
+        android:textSize="15sp"
+        android:fontFamily="@font/poppinsmedium"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
@@ -74,7 +73,7 @@
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:layout_marginStart="100dp"
-        android:layout_marginTop="260dp"
+        android:layout_marginTop="200dp"
         android:layout_marginEnd="100dp"
         android:background="@drawable/btn_sigin"
         android:fontFamily="@font/poppinsmedium"
@@ -100,4 +99,54 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnl_SigIn" />
+
+
+    <LinearLayout
+        android:id="@+id/dividerLayout"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="@+id/btnl_LogIn"
+        app:layout_constraintStart_toStartOf="@+id/btnl_LogIn"
+        app:layout_constraintTop_toBottomOf="@+id/btnl_LogIn">
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="1dp"
+            android:layout_weight="1"
+            android:background="@color/black" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:text="OR"
+            android:textColor="@color/black"
+            android:fontFamily="@font/poppinsmedium"
+            android:textAllCaps="true" />
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="1dp"
+            android:layout_weight="1"
+            android:background="@color/black" />
+    </LinearLayout>
+
+    <ImageButton
+        android:id="@+id/btnContinueWithGoogle"
+        android:layout_width="300dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="20dp"
+        android:adjustViewBounds="true"
+        android:background="@android:color/transparent"
+        android:contentDescription="Lanjutkan dengan Google"
+        android:scaleType="fitCenter"
+        android:src="@drawable/ic_continue_with_google"
+        app:layout_constraintEnd_toEndOf="@+id/dividerLayout"
+        app:layout_constraintStart_toStartOf="@+id/dividerLayout"
+        app:layout_constraintTop_toBottomOf="@+id/dividerLayout" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
