--- a/app/src/main/res/layout/n_item_event.xml
+++ b/app/src/main/res/layout/n_item_event.xml
@@ -3,43 +3,50 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@drawable/bg_itemevent"
+    android:layout_margin="8dp"
+    android:padding="8dp">
 
     <LinearLayout
         android:id="@+id/contact_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="10dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:padding="15dp"
         android:orientation="horizontal"
-        android:background="@drawable/bg_itemevent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent">
+
         <androidx.cardview.widget.CardView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:cardCornerRadius="16dp"
             app:cardElevation="4dp">
-        <FrameLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-        <ImageView
-            android:id="@+id/imgEvent"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/event" />
-        </FrameLayout>
+
+            <FrameLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:id="@+id/imgEvent"
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/event" />
+            </FrameLayout>
         </androidx.cardview.widget.CardView>
+
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:orientation="vertical">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -54,29 +61,31 @@
                     android:textSize="20sp"
                     android:textColor="@color/black" />
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
-            <TextView
-                android:id="@+id/txtTanggal"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="XX Lorem 20xx"
-                android:textSize="15sp"
-                android:fontFamily="@font/poppinsmedium"
-                android:textColor="@color/darkGrey"
-                android:layout_marginEnd="8dp"/>
-            <TextView
-                android:id="@+id/txtWaktu"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="00.00 - 00.00"
-                android:textSize="15sp"
-                android:fontFamily="@font/poppinsmedium"
-                android:textColor="@color/darkGrey"/>
+                <TextView
+                    android:id="@+id/txtTanggal"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="XX Lorem 20xx"
+                    android:textSize="15sp"
+                    android:fontFamily="@font/poppinsmedium"
+                    android:textColor="@color/darkGrey"
+                    android:layout_marginEnd="8dp" />
+                <TextView
+                    android:id="@+id/txtWaktu"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="00.00 - 00.00"
+                    android:textSize="15sp"
+                    android:fontFamily="@font/poppinsmedium"
+                    android:textColor="@color/darkGrey" />
             </LinearLayout>
+
             <TextView
                 android:id="@+id/txtLokasi"
                 android:layout_width="wrap_content"
@@ -85,38 +94,64 @@
                 android:text="Zoom Meeting"
                 android:textSize="13sp"
                 android:fontFamily="@font/poppinsmedium"
-                android:textColor="@color/darkGrey"/>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginTop="10dp">
-                <Button
-                    android:id="@+id/btniv_batal"
-                    android:layout_width="70dp"
-                    android:layout_height="40dp"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:background="@drawable/btn_itemevent"
-                    android:text="Batal Ikuti"
-                    android:textColor="@color/biruMuda"
-                    android:textSize="14sp"
-                    android:layout_marginEnd="10dp"/>
-                <Button
-                    android:id="@+id/btniv_detail"
-                    android:layout_width="70dp"
-                    android:layout_height="40dp"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:padding="2dp"
-                    android:background="@drawable/btn_siginsigin"
-                    android:text="Lihat Tiket"
-                    android:textColor="@color/white"
-                    android:textAllCaps="true"
-                    android:textSize="14sp"/>
+                android:textColor="@color/darkGrey" />
 
-            </LinearLayout>
+            <TextView
+                android:id="@+id/txtStatus"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Status: Terdaftar"
+                android:layout_marginTop="8dp"
+                android:textSize="14sp"
+                android:fontFamily="@font/poppinsmedium"
+                android:textColor="@color/teal_700" />
         </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="26dp"
+        android:layout_marginEnd="26dp"
+        app:layout_constraintTop_toBottomOf="@+id/contact_layout"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <Button
+            android:id="@+id/btniv_konfirmasi"
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:layout_weight="1"
+            android:background="@drawable/btn_eventku"
+            android:text="KONFIRMASI"
+            android:textAllCaps="false"
+            android:textColor="@color/biruMuda"
+            android:textSize="14sp"
+            android:layout_marginEnd="4dp" />
+
+        <Button
+            android:id="@+id/btniv_batal"
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:layout_weight="1"
+            android:background="@drawable/btn_itemevent"
+            android:text="Batal Ikuti"
+            android:textColor="@color/biruMuda"
+            android:textSize="14sp"
+            android:layout_marginEnd="4dp" />
+
+        <Button
+            android:id="@+id/btniv_detail"
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:layout_weight="1"
+            android:background="@drawable/btn_siginsigin"
+            android:text="Lihat Tiket"
+            android:textColor="@color/white"
+            android:textAllCaps="true"
+            android:textSize="14sp" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
