--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,15 @@
     <color name="black">#000000</color>
     <color name="green_dark">#388E3C</color>   <!-- Hijau tua -->
     <color name="green_text">#1B5E20</color>   <!--  teks -->
+
+        <color name="purple_200">#FFBB86FC</color>
+        <color name="purple_500">#FF6200EE</color>
+        <color name="purple_700">#FF3700B3</color>
+        <color name="teal_200">#FF03DAC5</color>
+        <color name="teal_700">#FF018786</color>
+        <color name="red_delete">#F44336</color>
+        <color name="blue_secondary">#2196F3</color>
+
+    <color name="grey">#B0B0B0</color>
+    <color name="netral">#F0F8FF</color>
 </resources>
