--- a/app/src/main/res/layout/j_notification.xml
+++ b/app/src/main/res/layout/j_notification.xml
@@ -5,90 +5,56 @@
     android:layout_height="match_parent"
     android:background="@color/white">
 
-    <TextView
-        android:id="@+id/tvTitle"
+    <!-- Title Bar -->
+    <RelativeLayout
+        android:id="@+id/titleBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Notifikasi"
-        android:textSize="20sp"
-        android:gravity="center"
-        android:padding="16dp"
         android:background="@drawable/background"
-        android:textColor="@color/black"
-        android:layout_alignParentTop="true"/>
+        android:padding="16dp"
+        android:layout_alignParentTop="true">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerNotifikasi"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_below="@id/tvTitle"
-        android:background="@color/white"
-        android:layout_above="@id/bottomNavbar"
-        android:padding="8dp"/>
+        <ImageButton
+            android:id="@+id/btnBack"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_baseline_arrow_back"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:contentDescription="Tombol Kembali"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true" />
 
+        <TextView
+            android:id="@+id/tvTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Notification"
+            android:textSize="20sp"
+            android:textColor="@color/black"
+            android:layout_centerInParent="true" />
+    </RelativeLayout>
+
+    <!-- Floating Action Button -->
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fabUpload"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginBottom="90dp"
+        android:layout_marginBottom="20dp"
         android:layout_marginEnd="16dp"
         android:contentDescription="Upload Gambar"
         android:src="@drawable/ic_upload"
         app:backgroundTint="#4FB2DF"
         app:tint="@android:color/white" />
 
-    <LinearLayout
-        android:id="@+id/bottomNavbar"
+    <!-- RecyclerView -->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerNotifikasi"
         android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:layout_alignParentBottom="true"
-        android:orientation="horizontal"
-        android:weightSum="4"
-        android:background="#EEEEEE">
-
-        <Button
-            android:id="@+id/btnHome"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="Home"
-            android:textSize="12dp"
-            android:drawableTop="@drawable/ic_homepage"
-            android:gravity="center"
-            android:paddingTop="8dp"/>
-
-        <Button
-            android:id="@+id/btnNotifikasi"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:text="Notifikasi"
-            android:layout_weight="1"
-            android:drawableTop="@drawable/ic_notification"
-            android:enabled="false"
-            android:gravity="center"
-            android:textSize="12dp" />
-
-        <Button
-            android:id="@+id/btnDashboard"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="Dashboard"
-            android:drawableTop="@drawable/ic_dashboard"
-            android:gravity="center"
-            android:textSize="12dp" />
-
-        <Button
-            android:id="@+id/btnProfile"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="Profile"
-            android:drawableTop="@drawable/ic_pfp"
-            android:gravity="center"
-            android:textSize="12dp" />
-    </LinearLayout>
-
+        android:layout_height="match_parent"
+        android:layout_above="@id/fabUpload"
+        android:layout_below="@id/titleBar"
+        android:background="@color/white"
+        android:padding="8dp" />
 </RelativeLayout>
